@@ -22,7 +22,6 @@ import java.util.List;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import io.vertigo.core.daemon.Daemon;
 import io.vertigo.core.daemon.DaemonStat;
@@ -38,6 +37,7 @@ import io.vertigo.core.util.NamedThreadFactory;
  * @author mlaroche, pchretien, npiedeloup
  */
 final class DaemonExecutor implements Activeable {
+	private static final int STOP_TIMEOUT = 30; //30s
 	private boolean isActive;
 	private final ScheduledExecutorService scheduler;
 	private final List<DaemonListener> daemonListeners = new ArrayList<>();
@@ -83,7 +83,7 @@ final class DaemonExecutor implements Activeable {
 		return daemonListeners
 				.stream()
 				.map(DaemonListener::getStat)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	/** {@inheritDoc} */
@@ -98,7 +98,7 @@ final class DaemonExecutor implements Activeable {
 		scheduler.shutdown();
 		isActive = false;
 		try {
-			scheduler.awaitTermination(5000, TimeUnit.SECONDS);
+			scheduler.awaitTermination(STOP_TIMEOUT, TimeUnit.SECONDS);
 		} catch (final InterruptedException e) {
 			// Restore interrupted state...
 			Thread.currentThread().interrupt();
